[gd_scene load_steps=7 format=2]

[ext_resource path="res://Resources/Art/Items.png" type="Texture" id=1]
[ext_resource path="res://Scripts/ShopItem.gd" type="Script" id=2]
[ext_resource path="res://Resources/Themes/SmallTextTheme.tres" type="Theme" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 12 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Items:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.145321, 0.274327, 0.327193, 0.427193, 0.527193 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -10 ), Vector2( 0, 0 ), Vector2( 0, 0 ), Vector2( 0, -4 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Items:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[node name="ShopItem" type="Node2D"]
script = ExtResource( 2 )

[node name="Items" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 13

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/RESET = SubResource( 3 )

[node name="Label" type="Label" parent="."]
visible = false
margin_left = -20.0
margin_top = -20.0
margin_right = 20.0
margin_bottom = -6.0
theme = ExtResource( 3 )
text = "asfd"

[node name="Label2" type="Label" parent="Label"]
margin_top = -12.0
margin_right = 40.0
margin_bottom = 2.0
theme = ExtResource( 3 )
text = "asdf"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
